Edtech Marine Website

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+  <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -46,13 +46,16 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="index.html"><b>Edtech Marine </b></a>
-                   <img src="logo.png" alt="image1" id="logo">
+
+                  <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <!-- <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD </b></a> -->
+                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                      <li>
+                      <li class="active">
                           <a href="about.html">About</a>
                       </li>
                       <li class="dropdown">
@@ -60,6 +63,10 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="spares.html">Stores and Spares</a>
+                                </li>
+
+                                <li>
+                                    <a href="agency.html">Edtech Agency and Husbandry </a>
                                 </li>
                                 <li>
                                     <a href="engineering.html">Edtech Engineering</a>
@@ -150,9 +157,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About Us
-
-                </h1>
+                
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
@@ -167,9 +172,10 @@
             <!---<div class="col-md-6">
                 <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
 
-          <p id="p1">    Edtech Marine was established with the purpose of single point professional services to all requirements of the marine industry including but not limited to supplies of stores and spares worldwide, inspection and servicing of lifesaving and firefighting equipment, repairs, storage services, agency and repair/fabrication services.
+          <p id="p1">    Edtech Marine was established with the purpose of single point professional services to all requirements of the marine industry
+             including but not limited to supplies of stores and spares worldwide, inspection and servicing of lifesaving and firefighting equipment, repairs, storage services, agency and repair/fabrication services.
 
 At Edtech Marine, we ensure our products are reliable and cost-effective. We take pride in being a leading supplier of marine safety, life-saving and firefighting equipment in Singapore. Our safety products are priced at one of the best market prices in Singapore and are guaranteed of its reliability.
 
