--- a/agency.html
+++ b/agency.html
@@ -14,14 +14,15 @@
     <!-- Bootstrap Core CSS -->
    <link href="css/bootstrap.min.css" rel="stylesheet">
 
+
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet">
 
+  <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -49,6 +50,7 @@
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
                   <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -103,41 +105,66 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-              
+                
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Services</li>
+                    <li class="active">Edtech Agency and Husbandry</li>
                 </ol>
             </div>
         </div>
-        <!-- /.row -->
+
 </nav>
-        <!-- Intro Content -->
+
         <div class="row">
-            <!---<div class="col-md-6">
-                <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
 
+            </div>
             <div class="col-md-12">
+              <p> Singapore is the world’s busiest port where approximately 50,000 vessels pass through
+                every year. Many owners and charterers find it convenient to receive spares and stores, carry out
+                crew changes and receive Cash to Master (CTM) while passing through Singapore. </p>
 
+                <p> We at Edtech Marine can provide services required in the most timely and
+                  cost-effective manner without compromising safety of personnel and equipment.
+                  Some of the services we provide include: </p>
 
-<p> Edtech Marine provides a full range of Marine services including: </p>
+                  <ul>
+                    <li style="font-size:18px"> Crew changes including changing visas and entry formalities</li>
+                    <li style="font-size:18px"> Cash to Master
+</li>
 
-<ul>
-  <li style="font-size: 18px"><a href="spares.html">Supply of Stores and Spares </a> </li>
-    <li style="font-size: 18px"><a href="engineering.html">Marine Engineering & Repairs</a> </li>
-    <li style="font-size: 18px"><a href="safety.html">Safety and Automation</a> </li>
-    <li style="font-size: 18px"><a href="itservices.html">I.T Services</a> </li>
-    <li style="font-size: 18px"><a href="agency.html">Agency & Husbandry
-</a> </li>
+                    <li style="font-size:18px"> Crew handling (meet & greet, hotel bookings, shore pass arrangements, etc.)
+</li>
+
+                    <li style="font-size:18px"> Crew welfare (doctor, dentist, mail, and prepaid telephone calling cards)
+</li>
+
+                    <li style="font-size:18px"> Inward & Outward clearance
+</li>
+
+<li style="font-size:18px"> Liaison with local authorities
+
+</li>
+
+<li style="font-size:18px"> Communication assistance
+
+</li>
+
 </ul>
 
+<p> We have excellent relations with suppliers, port & immigration authorities
+  in Singapore, ensuring that client’s needs are given <br> preference. </p>
 
-<p> Please click on the above links for more information and do not hesitate to contact
-  us at<a href="contact.html"> info@edtech.com.sg</a> for supply and agency services and at <a href="engineering.html"> repairs@edtech.com.sg </a>
- for Engineering, Repairs, Safety and Automation services. Alternatively, call us at +65 6397 5980.</p>
 
-</div>
+
+
+
+
+
+
+
+
+
 
 
 
