--- a/index copy.html
+++ b/index copy.html
@@ -21,8 +21,6 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <link href="css/style.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -45,9 +43,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE</b></a>
-
+                <a class="navbar-brand" href="index.html"  style="color:white" font-size="28px"><b>EDTECH MARINE (S) PTE LTD</b></a>
+               <img src="logo.png" alt="image1" id="logo">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -149,31 +146,31 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header" style="color: #0033cc"><b>Welcome to Edtech Marine Services</b></h2>
+                <h2 class="page-header" style="color: blue">Welcome to Edtech Marine Services</h2>
             </div>
             <div class="col-md-4 col-sm-6">
-                <title>  About Us
+                <title> About Us
                </title>
 
-               <h2><b>About Us</b> </h2>
-
+               <h2>About Us </h2>
+                <a href="about.html"> Continue Reading
                     <img id="i1" class="img-circle img-portfolio img-hover" src="images/logo black.png" alt="" width="350" height="300">
 
-                <!-- </a> -->
+                </a>
 
 
             </div>
             <div class="col-md-4 col-sm-6">
-              <h2><b> Products </b></h2>
-                <!-- <a href="product.html"> Continue Reading -->
+              <h2> Products</h2>
+                <a href="product.html"> Continue Reading
                     <img  id="i1"class="img-circle img-portfolio img-hover" src="images/Products.jpg" alt="" width="350" height="300">
-                <!-- </a> -->
+                </a>
             </div>
             <div class="col-md-4 col-sm-6">
-              <h2><b> Services </b></h2>
-                <!-- <a href="services.html"> Continue Reading -->
+              <h2> Services</h2>
+                <a href="services.html"> Continue Reading
                     <img class="img-circle img-portfolio img-hover" src="images/Services.jpg" alt="" width="350" height="300">
-                <!-- </a> -->
+                </a>
 
             </div>
 
@@ -198,79 +195,43 @@
 
         <div class="row">
           <div class="col-lg-12">
-<h2 class="page-header" style="color: #0033cc"></h2>
+<h2 class="page-header">Memberships & Brands</h2>
 
         </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-4">
 
-          <p id="j1" style="color:Maroon"> Memberships</p>
-          <div class="col-md-12">
+          <p id="j1"> Memberships</p>
+          <div class="col-md-2">
             <div class="images">
          <a target="_blank" href="images/tn1.jpg" >
             <img src="images/tn1.jpg" alt="Fjords" class="img-responsive" >
          </a>
 
         </div>
+
+
+        </div>
+
+          <div class="col-md-2">
         <div class="images">
           <a target="_blank" href="images/bsafei.jpg">
             <img  src="images/bsafei.jpg" alt="Forest1" class="img-responsive" >
           </a>
 
         </div>
-        <div class="images">
-     <a target="_blank" href="images/fghjty.png" >
-        <img src="images/fghjty.png" alt="Fjords" class="img-responsive" >
-     </a>
-
-    </div>
-    <div class="images">
-      <a target="_blank" href="images/bscic.jpg">
-        <img  src="images/bscic.jpg" alt="Forest1" class="img-responsive" >
-      </a>
-
-    </div>
-
         </div>
 
 
 
-  </div>
-
-  <div class="col-md-6 col-lg-6">
-
-  <p id="j2" style="color: Maroon"> Brands</p>
-  <div class="col-md-12">
-    <div class="images brand-img">
- <a target="_blank" href="images/fang.jpg" >
-    <img src="images/fang.jpg" alt="Fjords" class="img-responsive" >
- </a>
-
-</div>
-<div class="images brand-img">
-  <a target="_blank" href="images/lal.png">
-    <img  src="images/lal.png" alt="Forest1" class="img-responsive" >
-  </a>
-
-</div>
-<div class="images brand-img">
-<a target="_blank" href="images/rong.jpg" >
-<img src="images/rong.jpg" alt="Fjords" class="img-responsive" >
-</a>
-
-</div>
-
-</div>
 
 
 
-</div>
 
 
-
-        <!-- <div class="row">
+        <div class="row">
 
 
           <div class="col-md-2">
@@ -296,10 +257,17 @@
 
 
 
-        </div> -->
-
+        </div>
+        </div>
 
 </div>
+
+<div class="row">
+  <div class="col-lg-12">
+   <div class="col-md-6">
+     <p > Brands</p>
+
+  </div>
 
 
 
