--- a/product.html
+++ b/product.html
@@ -13,11 +13,11 @@
 
     <!-- Bootstrap Core CSS -->
    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
-
-
+    <!--Images gallery styling-->
+     <link href="css/images.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -46,8 +46,9 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="index.html"><b>Edtech Marine </b></a>
-                   <img src="logo.png" alt="image1" id="logo">
+                  <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -62,6 +63,9 @@
                                     <a href="spares.html">Stores and Spares</a>
                                 </li>
                                 <li>
+                                    <a href="agency.html">Edtech Agency and Husbandry </a>
+                                </li>
+                                <li>
                                     <a href="engineering.html">Edtech Engineering</a>
                                 </li>
                                 <li>
@@ -73,7 +77,7 @@
 
                             </ul>
                         </li>
-                      <li>
+                      <li class="active">
                         <a href="product.html">Products</a>
                       </li>
                       <li>
@@ -82,62 +86,6 @@
                       <li>
                           <a href="contact.html">Contact Us</a>
                       </li>
-
-                  <!---   <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                          <ul class="dropdown-menu">
-                              <li>
-                                  <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                              </li>
-                              <li>
-                                  <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                              </li>
-                              <li>
-                                  <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                              </li>
-                              <li>
-                                  <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                              </li>
-                              <li>
-                                  <a href="portfolio-item.html">Single Portfolio Item</a>
-                              </li>
-                          </ul>
-                      </li>
-                      <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                          <ul class="dropdown-menu">
-                              <li>
-                                  <a href="blog-home-1.html">Blog Home 1</a>
-                              </li>
-                              <li>
-                                  <a href="blog-home-2.html">Blog Home 2</a>
-                              </li>
-                              <li>
-                                  <a href="blog-post.html">Blog Post</a>
-                              </li>
-                          </ul>
-                      </li>--->
-                      <!---<li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                          <ul class="dropdown-menu">
-                              <li>
-                                  <a href="full-width.html">Full Width Page</a>
-                              </li>
-                              <li>
-                                  <a href="sidebar.html">Sidebar Page</a>
-                              </li>
-                              <li>
-                                  <a href="faq.html">FAQ</a>
-                              </li>
-                              <li>
-                                  <a href="404.html">404</a>
-                              </li>
-                              <li>
-                                  <a href="pricing.html">Pricing Table</a>
-                              </li>
-                          </ul>
-                      </li>
-                  </ul>----->
               </div>
               <!-- /.navbar-collapse -->
           </div>
@@ -150,9 +98,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Products
 
-                </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
@@ -164,56 +110,511 @@
 </nav>
         <!-- Intro Content -->
 
-            <div class="col-md-6">
 
-          <p id="life" font-style="italic" ><b> Life Saving Equipement</b>
-          </p>
-          <div class="images">
-            <a target="_blank" href="images/ChemicalSuit.jpg">
-              <img src="images/ChemicalSuit.jpg" alt="Fjords" width="150" height="200">
+<div class="row">
+  <div class="col-md-4">
+
+  <p id="life" font-style="italic" ><b> Life Saving Equipement</b>
+      </p>
+</div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 product-70">
+<div class="row">
+  <div class="col-md-4">
+
+    <div class="images">
+ <a target="_blank" href="images/chemicalsuit.jpg">
+    <img src="images/ChemicalSuit.jpg" alt="Fjords" class="img-responsive">
  </a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"><b>Chemical Suit</b></div>
 </div>
 
-<div class="images">
-  <a target="_blank" href="images/CoCartirdges.jpg">
-    <img  src="/Users/EKTA/Desktop/startbootstrap-modern-business-1.0.5/images/Co2Cartirdges.jpg" alt="Forest" width="170" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
+
 </div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/co2 capsule.jpg">
+    <img  src="images/co2 capsule.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Co2 Cartridges</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+
 
 <div class="images">
   <a target="_blank" href="images/Dynamometer.jpg">
-    <img src="/Users/EKTA/Desktop/startbootstrap-modern-business-1.0.5/images/Dynamometer.jpg" alt="Forest" width="150" height="200">
+    <img src="images/Dynamometer.jpg" alt="Forest2" class="img-responsive">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc"><b>Dynamometer</b></div>
 </div>
+
+</div>
+
+</div>
+
+
+
+
+
+
+<!--row2 -->
+
+<div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/EEBD.jpg">
+    <img src="images/EEBD.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>EEBD</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/firstaid kit.jpg">
+    <img  src="images/firstaid kit.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>First Aid Kit</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/HRU.jpg">
+    <img src="images/HRU.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>HRU</b></div>
+</div>
+
+</div>
+
+</div>
+
+
+<!-- row3 -->
+
+
+<div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/immersion suits.jpg">
+    <img src="images/immersion suits.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>Immersion <br> Suit</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/Inflatable Lifejacket.jpg">
+    <img  src="images/Inflatable Lifejacket.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Inflatable Life<br>jacket</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/lifebuouy light .jpg">
+    <img src="images/lifebuouy light.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>Lifebuouy<br> Light</b></div>
+</div>
+
+</div>
+
+</div>
+
+<!-- row4 -->
+<div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/lifebuouy line.jpg">
+    <img src="images/lifebuouy line.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>Lifebuouy Line</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/lifebuouy.jpg">
+    <img  src="images/lifebuouy.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Lifebuouy</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/liferaft .jpg">
+    <img src="images/liferaft.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>Liferaft</b></div>
+</div>
+
+</div>
+
+</div>
+
+<!--row5  -->
+<div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/lifejacket.jpg">
+    <img src="images/lifejacket.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>Lifejacket Light</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/Lifejacket1.jpg">
+    <img  src="images/Lifejacket1.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Lifejacket</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/lifeline.jpg">
+    <img src="images/lifeline.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>Lifeline</b></div>
+</div>
+
+</div>
+
+</div>
+
+<!-- row6 -->
+ <div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/marine whistle.jpg">
+    <img src="images/marine whistle.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>Marine Whistle</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/safetyhelmet.jpg">
+    <img  src="images/safetyhelmet.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Safety Helmet</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/SCBA.jpg">
+    <img src="images/SCBA.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>SCBA</b></div>
+</div>
+
+</div>
+
+</div>
+
+<!-- row7 -->
+
+ <div class="row">
+
+  <div class="col-md-4 ">
+
+    <div class="images">
+ <a target="_blank" href="images/Solas.jpg">
+    <img src="images/Solas.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc" ><b>Solas Reflective<br> Tape</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/waterproof torch.jpg">
+    <img  src="images/waterproof torch.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Waterproof <br>Torch</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/work vest.jpg">
+    <img src="images/work vest.jpg" alt="Forest2" class="img-responsive">
+  </a>
+  <div class="desc"><b>Work<br> Vest</b></div>
+</div>
+
+</div>
+
+</div>
+
+
+<!-- row8 -->
+
+<div class="row">
+
+ <div class="col-md-4 ">
+
+   <div class="images">
+<a target="_blank" href="images/stretcher.jpg">
+   <img src="images/stretcher.jpg" alt="Fjords" class="img-responsive">
+</a>
+<div class="desc" ><b>Stretcher</b></div>
+</div>
+
+
+</div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+</div>
+
+  <div class="col-md-2 product-30">
+    <p style="font-size:18px; color: blue;"> EDTECH STORES AND SPARES </p>
+    <p style="font-size:16px"> Ms Llanie,Prurchase Manager </p>
+      <p style="font-size:16px"> Tel: +65 6397 5980 </p>
+      <p style="font-size:16px"> Fax: +65 6397 5981 </p>
+
+
+      <p style="font-size:18px; color: blue;"> EDTECH LSA/FFA PRODUCTS</p>
+      <p style="font-size:16px"> Ms Wendy Wong,Marketing Executive</p>
+        <p style="font-size:16px"> Tel: +65 6397 5980 </p>
+        <p style="font-size:16px"> Fax: +65 6397 5981 </p>
+
+
+        <p style="font-size:18px; color: blue;"> EDTECH ENGINEERING</p>
+        <p style="font-size:16px"> Mr. Saini Singh, Engineer</p>
+          <p style="font-size:16px"> Tel: +65 6397 5980 </p>
+          <p style="font-size:16px"> Fax: +65 6397 5981 </p>
+
+          <p style="font-size:18px; color: blue;"> EDTECH AGENCY/I.T SERVICES</p>
+          <p style="font-size:16px"> Mr. LP Singh, Agency Manager/I.T Specialist</p>
+            <p style="font-size:16px"> Tel: +65 6397 5980 </p>
+            <p style="font-size:16px"> Fax: +65 6397 5981 </p>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+    <hr id="hr1" width="50%" >
+
+    <div class="row">
+      <div class="col-md-4">
+
+      <p id="fire"  ><b> Fire Fighting Equipment</b>
+          </p>
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 product-70">
+    <div class="row">
+      <div class="col-md-4">
+
+        <div class="images">
+     <a target="_blank" href="images/product10.jpg">
+        <img src="images/product10.jpg" alt="Fjords" class="img-responsive">
+     </a>
+     <div class="desc"><b>Foam <br>Concentrator</b></div>
+    </div>
+
+
+    </div>
+
+      <div class="col-md-4">
+    <div class="images">
+      <a target="_blank" href="images/fire extinguisher.jpg">
+        <img  src="images/fire extinguisher.jpg" alt="Forest1" class="img-responsive" >
+      </a>
+      <div class="desc"><b>Fire<br> Extinguishers</b></div>
+    </div>
+    </div>
+
+
+
+    <div class="col-md-4">
+
+
+    <div class="images">
+      <a target="_blank" href="images/fireblanket.jpg">
+        <img src="images/fireblanket.jpg" alt="Forest2" class="img-responsive">
+      </a>
+      <div class="desc"><b>Fire <br>Blanket</b></div>
+    </div>
+
+    </div>
+
+    </div>
+
+
+<!-- row2 -->
+
+<div class="row">
+  <div class="col-md-4">
+
+    <div class="images">
+ <a target="_blank" href="images/firehoses.jpg">
+    <img src="images/firehoses.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc"><b>Fire Hoses</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/fireman axe.jpg">
+    <img  src="images/fireman axe.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Fireman Axe</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+
 
 <div class="images">
-  <a target="_blank" href="images/EEBD.jpg">
-    <img src="/Users/EKTA/Desktop/startbootstrap-modern-business-1.0.5/images/EEBD.jpg" alt="Forest" width="150" height="200">
+  <a target="_blank" href="images/fireman suits.jpg">
+    <img src="images/fireman suits.jpg" alt="Forest2" class="img-responsive">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc"><b>Fireman Suits</b></div>
 </div>
+
+</div>
+
+</div>
+
+<!-- row 3 -->
+<div class="row">
+  <div class="col-md-4">
+
+    <div class="images">
+ <a target="_blank" href="images/PFA.jpg">
+    <img src="images/PFA.jpg" alt="Fjords" class="img-responsive">
+ </a>
+ <div class="desc"><b>Portable Foam<br> Applicator</b></div>
+</div>
+
+
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/firehose.jpg">
+    <img  src="images/firehose.jpg" alt="Forest1" class="img-responsive" >
+  </a>
+  <div class="desc"><b>Fire Hose<br> Box</b></div>
+</div>
+</div>
+
+
+
+<div class="col-md-4">
+
 
 <div class="images">
-  <a target="_blank" href="images/FirstAidKit.jpg">
-    <img src="/Users/EKTA/Desktop/startbootstrap-modern-business-1.0.5/images/FirstAidKit.jpg" alt="Forest" width="150" height="200">
+  <a target="_blank" href="images/FNC.jpg">
+    <img src="images/FNC.jpg" alt="Forest2" class="img-responsive">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc"><b>Fire Nozzles <br> & Couplings</b></div>
 </div>
 
-<div class="images">
-  <a target="_blank" href="images/HRU.jpeg">
-    <img src="/Users/EKTA/Desktop/startbootstrap-modern-business-1.0.5/images/HRU.jpeg" alt="Forest" width="160" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
+</div>
+
 </div>
 
 
 
-            </div>
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+                     </div>
+                   </div>
+
+
+
+
         <!-- /.row -->
 
         <!-- Team Members -->
