--- a/careers.html
+++ b/careers.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+<link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -34,13 +34,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>Edtech Marine</b></a>
-                 <img src="logo.png" alt="image1" id="logo">
+                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                 <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                      <li class="active">
+                      <li >
                           <a href="about.html">About</a>
                       </li>
                       <li class="dropdown">
@@ -48,6 +49,10 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="spares.html">Stores and Spares</a>
+                                </li>
+
+                                <li>
+                                    <a href="spares.html">Edtech Agency and Husbandry </a>
                                 </li>
                                 <li>
                                     <a href="engineering.html">Edtech Engineering</a>
@@ -65,7 +70,7 @@
                       <li>
                           <a href="product.html">Products</a>
                       </li>
-                      <li>
+                      <li class="active">
                           <a href="careers.html">Careers</a>
                       </li>
 
@@ -86,9 +91,7 @@
             <!-- Page Heading/Breadcrumbs -->
             <div class="row">
               <div class="col-lg-12">
-                  <h1 class="page-header">Careers
-
-                  </h1>
+                  
                   <ol class="breadcrumb">
                       <li><a href="index.html">Home</a>
                       </li>
@@ -102,10 +105,10 @@
             <div class="row">
               <!---<div class="col-md-6">
                   <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
-              </div>
-              <div class="col-md-6">
 
-            <p id="p1">   Edtech Marine Services is always on the lookout for great talent. If you would like to be part of our team,
+              <div class="col-md-12">
+
+            <p id="p1">  Edtech Marine Services is always on the lookout for great talent. If you would like to be part of our team,
                you can drop us an email with your resume at <a href="contact.html"> info@edtech.com.sg </a>
             </p>
 
