--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+  <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>Edtech Marine</b></a>
+                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -57,22 +58,25 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">Stores and Spares</a>
+                                <a href="spares.html">Stores and Spares</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">Edtech Engineering</a>
+                                <a href="agency.html">Edtech Agency and Husbandry </a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Edtech Safety and Automation</a>
+                                <a href="engineering.html">Edtech Engineering</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">Edtech I.T Services</a>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
                             </li>
 
                         </ul>
                     </li>
                     <li>
-                        <a href="products.html">Products</a>
+                        <a href="product.html">Products</a>
                     </li>
 
                     <li>
@@ -81,7 +85,7 @@
 
 
                     <li class="active">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
 
 
@@ -99,13 +103,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Contact Us
-
-                </h1>
+              
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Contact</li>
+                    <li class="active">Contact Us</li>
                 </ol>
             </div>
         </div>
